--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^7.19.1",
     "flatted": "^3.0.4",
     "moment": "^2.27.0",
     "react": "16.11.0",
