--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "firebase": "^7.19.1",
+    "firebase-admin": "^9.1.1",
     "flatted": "^3.0.4",
     "moment": "^2.27.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-modal": "^3.11.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
