--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ethereumjs-tx": "^2.1.2",
+    "ethereumjs-util": "^7.0.4",
     "firebase": "^7.19.1",
     "firebase-admin": "^9.1.1",
     "flatted": "^3.0.4",
