--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,13 @@
     "firebase-admin": "^9.1.1",
     "flatted": "^3.0.4",
     "moment": "^2.27.0",
+    "node-sass": "^4.14.1",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-hot-loader": "^4.12.21",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.1",
+    "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
     "redux": "^4.0.5",
