--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@truffle/hdwallet-provider": "^1.0.44",
+    "dotenv": "^8.2.0",
     "ethereumjs-tx": "^2.1.2",
     "ethereumjs-util": "^7.0.4",
     "firebase": "^7.19.1",
