--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^9.0.2",
+    "bootstrap": "^4.5.2",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
@@ -62,6 +63,7 @@
     "react-redux": "^7.2.1",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
+    "reactstrap": "^8.6.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-immutable": "^5.0.0",
